k8s/arrow-base.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    type: game-object
    app: arrow
    version: base
  name: arrow
  namespace: gos-arrows
spec:
  replicas: 0
  selector:
    matchLabels:
      app: arrow
      version: base
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
      labels:
        project: gos
        type: game-object
        app: arrow
        version: base
    spec:
      containers:
      - image:
        imagePullPolicy: Never
        name: arrow
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: arrow
  namespace: gos-arrows
  labels:
    project: gos
    type: game-object
    app: arrow
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: arrow
