k8s/catapult-vertx-base.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    type: game-object
    app: catapult
    runtime: vertx
    version: base
  name: catapult-vertx
  namespace: gos-catapults
spec:
  replicas: 0
  selector:
    matchLabels:
      app: catapult
      version: base
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/port: "9090"
      labels:
        project: gos
        type: game-object
        app: catapult
        runtime: vertx
        version: base
    spec:
      containers:
        - image:
          imagePullPolicy: Never
          name: catapult-vertx
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          securityContext:
            privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: catapult
  namespace: gos-catapults
  labels:
    project: gos
    type: game-object
    app: catapult
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: catapult
