k8s/villains-base.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    type: game-object
    app: villains
    version: base
  name: villains-base
  namespace: gos-villains
spec:
  replicas: 0
  selector:
    matchLabels:
      app: villains
      version: base
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/port: "9090"
      labels:
        project: gos
        type: game-object
        app: villains
        version: base
    spec:
      containers:
        - image:
          imagePullPolicy: Never
          name: villains
          resources:
            requests:
              memory: "16Gi"
              cpu: "10000m"
            limits:
              memory: "32Gi"
              cpu: "20000m"
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          securityContext:
            privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: villains
  namespace: gos-villains
  labels:
    project: gos
    type: game-object
    app: villains
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: villains
